--- a/package.json
+++ b/package.json
@@ -16,5 +16,12 @@
     "chalk": "^0.4.0",
     "nomnom": "^1.8.0",
     "prompt": "^0.2.13"
+  },
+  "devDependencies": {
+    "babel-core": "^5.8.19",
+    "babel-loader": "^5.3.2",
+    "react": "^0.13.3",
+    "react-tools": "^0.13.3",
+    "webpack": "^1.10.5"
   }
 }
